<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="@dimen/defi_layout_hight"
              android:background="@color/defi_background_color"
              android:orientation="vertical"
              tools:context=".MonitorMainScreen"
    android:id="@+id/defiLayout">

    <TextView
        android:id="@+id/defi_energy_textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/defi_background_color"
        android:gravity="center_horizontal"
        android:text="@string/startEnergy"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="80sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@drawable/border_black_back">

            <ImageButton
                android:id="@+id/defiButtonUp"
                android:layout_width="@dimen/arrowSize"
                android:layout_height="@dimen/arrowSize"
                android:background="@color/green"
                android:contentDescription="@string/defiButtonUp"
                android:onClick="defiEnergyUp"
                android:src="@android:drawable/arrow_up_float"
                />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/defiEnergySet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/energy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="37dp"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"
                />

            <ImageButton
                android:id="@+id/defiButtonDown"
                android:layout_width="@dimen/arrowSize"
                android:layout_height="@dimen/arrowSize"
                android:background="@color/green"
                android:contentDescription="@string/defiButtonDown"
                android:onClick="defiEnergyDown"
                android:src="@android:drawable/arrow_down_float"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/defiShockButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/roundedbutton"
            android:contentDescription="@string/defiShockButton"
            android:cropToPadding="false"
            android:onClick="shock"
            android:src="@android:drawable/ic_lock_idle_low_battery"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_alignParentRight="true">

            <Button
                android:id="@+id/defiChargeButton"
                android:layout_width="200sp"
                android:layout_height="80sp"


                android:background="@drawable/yellow_button"
                android:contentDescription="@string/defiChargeButton"

                android:onClick="defiCharge"
                android:text="@string/defiChargeText"
                android:layout_marginRight="41dp"
                android:layout_marginEnd="41dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                />
            <Button
                android:id="@+id/defiDischargeButton"
                android:layout_width="200sp"
                android:layout_height="80sp"


                android:background="@drawable/blue_button"
                android:contentDescription="@string/defiDischargeButton"

                android:onClick="defiDischarge"
                android:text="@string/defiDischargeText"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/defiChargeButton"
                android:layout_alignStart="@+id/defiChargeButton"
                />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
